--- a/minimal-flask-app-main/requirements.txt
+++ b/minimal-flask-app-main/requirements.txt
@@ -1,1 +1,5 @@
-pip freeze > requirements.txt
+Flask==2.2.3
+openai==0.27.0
+python-dotenv==0.20.0
+gunicorn==20.1.0  # For production deployment (Heroku, etc.)
+
